--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chess-course-app",
+  "name": "chess-empire-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "i18next": "^25.5.2",
     "next": "15.5.4",
+    "next-i18next": "^15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-i18next": "^16.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
